crates/forge_main/src/snapshots/forge_main__banner__tests__load_custom.snap
---
source: crates/forge_main/src/banner.rs
expression: "strip_ansi_escapes::strip_str(actual)"
---
Custom Banner

         Version: 0.1.0
New conversation: :new
     Get started: :info, :conversation
    Switch model: :model
 Switch provider: :provider
    Switch agent: :<agent_name> e.g. :forge or :muse
