crates/forge_main/src/snapshots/forge_main__banner__tests__load_default_non_interactive.snap
---
source: crates/forge_main/src/banner.rs
expression: "strip_ansi_escapes::strip_str(actual)"
---
 _____                    
|  ___|__  _ __ __ _  ___ 
| |_ / _ \| '__/ _` |/ _ \
|  _| (_) | | | (_| |  __/
|_|  \___/|_|  \__, |\___|
               |___/      

         Version: 0.1.0
New conversation: :new
     Get started: :info, :conversation
    Switch model: :model
 Switch provider: :provider
    Switch agent: :<agent_name> e.g. :forge or :muse
